# jm-manga

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml
.impeccable/: design.json
app/: README.md  README.zh.md  pubspec.yaml
app/lib/: main.dart  router.dart
app/test/: fake_repository.dart  router_test.dart  testable_app.dart
app/web/: index.html  manifest.json
docs/: CODEBASE.md  DESIGN.md  DEVELOPMENT.md  PRODUCT.md  README.md  TAG_EXCLUDE_DESIGN.md  architecture.md  building-mobile.md  deployment.md
docs/research/: available_categories_summary.md  ranking_probe_report.md
scripts/: build-flutter.sh  build-server-package.sh  build.sh  package-server.sh  release.sh  sync-version.sh  test-flutter.sh  update-jmcomic.sh
server/: .env.example  Dockerfile  README.md  README.zh.md  config.yml  docker-compose.yml  pyproject.toml  run.sh
server/src/jm_manga_server/: __main__.py  auth.py  config.py  cookies.py  crypto.py  database.py  dependencies.py  env_file.py  exceptions.py  jm_client.py  main.py  mdns.py  models.py  network.py  schemas.py
server/src/jm_manga_server/routers/: __init__.py  albums.py  auth.py  categories.py  covers.py  favorites.py  images.py  progress.py  search.py  server.py
server/src/jm_server/: __init__.py  cache.py  client.py  config.py  crypto.py  logging_config.py  main.py
server/src/jm_server/routes/: api.py  image.py
server/tests/: conftest.py  test_albums.py  test_api.py  test_auth.py  test_cache.py  test_categories.py  test_client.py  test_concurrency_isolation.py  test_config.py  test_covers.py  test_crypto.py  test_database.py  test_env_file.py  test_favorites.py  test_health.py  test_image_token.py  test_images.py  test_network.py  test_progress.py  test_search.py  test_server_cache.py  test_web_static.py
ui/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
(+214 files in other folders)
