[project]
name = "jm-manga-server"
version = "0.1.0"
description = "JM comic third-party app backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlmodel>=0.0.19",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "jmcomic>=2.7.0",
    "zeroconf>=0.132.0",
    "cryptography>=42.0.0",
    "ifaddr>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
jm-manga-server = "jm_manga_server.__main__:main"

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jm_manga_server"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
